style.css
@font-face {
  font-family: "Inter";
  src: url("assets/fonts/Inter-VariableFont_slnt\,wght.ttf");
  font-weight: 600;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: inter;
}

body {
  background: hsl(0, 0%, 8%);
  display: flex;
  justify-content: center;
  align-items: center;
  width: 100%;
  min-height: 100vh;
}

.main-container {
  background-color: hsl(0, 0%, 12%);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 400px;
  height: 600px;
  border-radius: 10px;
}

.info-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  height: 200px;
  width: 100%;
  margin-bottom: 2px;
}

.profile-picture {
  border-radius: 50%;
  height: 100px;
  margin-bottom: 15px;
}

.name {
  color: hsl(0, 0%, 100%);
  font-size: 25px;
}

.location {
  color: hsl(75, 94%, 57%);
  font-size: 13px;
  margin-top: 5px;
}

.description {
  color: hsl(0, 0%, 80%);
  font-size: 14px;
  margin-top: 20px;
}

.links-container {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  gap: 12px;
  width: 100%;
  height: 300px;
  margin-top: 20px;
}

.link-button {
  height: 45px;
  width: 80%;
  color: white;
  text-decoration: none;
  display: flex;
  justify-content: center;
  align-items: center;
  background-color: hsl(0, 0%, 20%);
  border: none;
  border-radius: 8px;
  cursor: pointer;
  font-size: 15px;
  transition: ease 0.3s;
}

.link-button:hover {
  background-color: hsl(75, 94%, 57%);
  color: hsl(0, 0%, 12%);
}

@media (width <= 600px) {
  .main-container {
    width: 320px;
  }
}

